--- a/styles.css
+++ b/styles.css
@@ -293,6 +293,8 @@ label {
     position: relative;
     left: 1000px;
 }
- .vstupenky {
 
+ .testimonial-card img  {
+     height: 80px;
+     width: 80px;
  }
